[project]
name = "process-template"
version = "0.3.0"
description = "Fjerner markeringen 'Igangværende kontrolgruppe sag' i Momentum, når en borger ikke længere har aktive kontrolsager i SBSYS."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "momentum-client",
    "odk-tools",
    "ruff>=0.15.13",
    "sbsys",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.3.0" }
momentum-client = { git = "https://github.com/odense-rpa/momentum-client.git" }
odk-tools = { git = "https://github.com/odense-rpa/odk-tools.git" }
sbsys = { git = "https://github.com/odense-rpa/sbsys-ng.git" }
